--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -12,7 +12,8 @@
 </head>
     <body>
         <div id="app"></div>
-        <script src="js/main.js"></script>
+        <script src="cljs-out/dev-main.js"></script>
+        <!--script src="js/main.js"></script-->
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <!-- Bootstrap JS -->
